Bunch of changes to improve API.

--- a/xslt/index.html
+++ b/xslt/index.html
@@ -8,10 +8,7 @@
 <script type="text/javascript">
 	
 	$(document).ready(function() {
-		$('textarea').focus().advancedEditor({
-			snippets:	'snippets.js',
-			completes:	'completes.js'
-		});
+		$('textarea').advancedEditor('language.js').focus();
 	});
 	
 </script>
