Reorganised code a little.

--- a/demos/xslt.html
+++ b/demos/xslt.html
@@ -3,12 +3,12 @@
 <title>XSLT Editor</title>
 <link href="../assets/editor.css" rel="stylesheet" type="text/css">
 <script src="../assets/jquery.js" type="text/javascript"></script>
-<script src="../assets/jquery.genericeditor.js" type="text/javascript"></script>
-<script src="../assets/jquery.advancededitor.js" type="text/javascript"></script>
+<script src="../assets/jquery.snicked.js" type="text/javascript"></script>
+<script src="../assets/jquery.snickedCore.js" type="text/javascript"></script>
 <script type="text/javascript">
 	
 	$(document).ready(function() {
-		$('textarea').advancedEditor('language.js').focus();
+		$('textarea').snicked('xslt.js').focus();
 	});
 	
 </script>
