--- a/demos/html.html
+++ b/demos/html.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>XSLT Editor</title>
+<title>HTML Editor</title>
 <link href="../assets/editor.css" rel="stylesheet" type="text/css">
 <script src="../assets/jquery.js" type="text/javascript"></script>
 <script src="../assets/jquery.snicked.js" type="text/javascript"></script>
@@ -8,7 +8,7 @@
 <script type="text/javascript">
 	
 	$(document).ready(function() {
-		$('textarea').snicked('xslt.js').focus();
+		$('textarea').snicked('html.js').focus();
 	});
 	
 </script>
