Moved demos to new function call.

--- a/demos/markdown.html
+++ b/demos/markdown.html
@@ -6,10 +6,52 @@
 <script src="../assets/jquery.snicked.js" type="text/javascript"></script>
 <script src="../assets/jquery.snickedCore.js" type="text/javascript"></script>
 <script type="text/javascript">
-	
+
 	$(document).ready(function() {
-		$('textarea').snicked('markdown.js').focus();
+		$('textarea')
+			.focus()
+			.snicked({
+				// Autocompletion:
+				autocomplete:	{
+					keys: {
+						9:		'tab',
+						13:		'enter'
+					},
+					rules:	[
+						// Headers:
+						{
+							key:			'enter',
+							before:			/^([ \t>]*)(#+)\s*(.*)$/,
+							snippet:		'{#0}\n{#1}\n{#1}'
+						},
+
+						// Blockquote:
+						{
+							key:			'enter',
+							before:			/\s*>\s*$/,
+							snippet:		'\n\n{$0}'
+						},
+						{
+							key:			'enter',
+							before:			/\s*(>)\s*(.*?)$/,
+							snippet:		'\n{#1} {#2}\n{#1} {$0}'
+						},
+
+						// Unordered list:
+						{
+							key:			'enter',
+							before:			/\s*[*-]\s*$/,
+							snippet:		'\n\n{$0}'
+						},
+						{
+							key:			'enter',
+							before:			/\s*([*-])\s*(.*?)$/,
+							snippet:		'\n{#1} {#2}\n{#1} {$0}'
+						}
+					]
+				}
+			});
 	});
-	
+
 </script>
 <textarea></textarea>
